--- a/FootballScoreVIP/Info.plist
+++ b/FootballScoreVIP/Info.plist
@@ -26,6 +26,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>需要打开您的照相机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要打开您的相册</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
